# ars

./: LICENSE.md  README.md  ars.py  pyproject.toml
.github/workflows/: update-ars-data.yml
data/: .gitignore  pyproject.toml  urn:de:bund:destatis:bevoelkerungsstatistik:schluessel:rs_2021-07-31.json  urn:de:bund:destatis:bevoelkerungsstatistik:schluessel:rs_2021-08-31.json  urn:de:bund:destatis:bevoelkerungsstatistik:schluessel:rs_2022-05-31.json  urn:de:bund:destatis:bevoelkerungsstatistik:schluessel:rs_2022-08-31.json  urn:de:bund:destatis:bevoelkerungsstatistik:schluessel:rs_2022-09-30.json
data/ars/: ars.py
web/: README.md  package.json
