[tool.poetry]
name = "ars-data"
version = "0.1.0"
description = ""
authors = ["Jonas Groeger <jonas.groeger@codecentric.de>"]

[tool.poetry.dependencies]
python = "^3.9"
untangle = "^1.1.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
